prepare vetomanagement interface for shared vetos (#2375)