@@ -20,6 +20,7 @@ package com.gip.xyna.xprc.xsched;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 
@@ -305,26 +306,40 @@ public class VetoManagement extends FunctionGroup implements VetoManagementInter
   /////////////////////////////////////////////////////////////
   
   public VetoAllocationResult allocateVetos(OrderInformation orderInformation, List<String> vetos, long urgency) {
+    return allocateVetos(orderInformation, vetos, Collections.emptyList(), urgency);
+  }
+
+  public VetoAllocationResult allocateVetos(OrderInformation orderInformation, List<String> exclusiveVetos, List<String> sharedVetos, long urgency) {
     
-    if (vetos.isEmpty() ) {
+    if (exclusiveVetos.isEmpty() ) {
       return VetoAllocationResult.SUCCESS;
     }
     
-    for( String v : vetos ) {
+    for( String v : exclusiveVetos ) {
       if( v == null || v.length() == 0 ) {
         return new VetoAllocationResult(new XPRC_VetonameMustNotBeEmpty());
       }
     }
     
-    return vmAlgorithm.allocateVetos(orderInformation, vetos, urgency);
+    return vmAlgorithm.allocateVetos(orderInformation, exclusiveVetos, sharedVetos, urgency);
   }
 
   public void undoAllocation(OrderInformation orderInformation, List<String> vetos) {
-    vmAlgorithm.undoAllocation(orderInformation,vetos);
+    undoAllocation(orderInformation, vetos, Collections.emptyList());
+  }
+
+  @Override
+  public void undoAllocation(OrderInformation orderInformation, List<String> exclusiveVetos, List<String> sharedVetos) {
+    vmAlgorithm.undoAllocation(orderInformation, exclusiveVetos, sharedVetos);
   }
   
   public void finalizeAllocation(OrderInformation orderInformation, List<String> vetos) {
-    vmAlgorithm.finalizeAllocation(orderInformation, vetos);
+    finalizeAllocation(orderInformation, vetos, Collections.emptyList());
+  }
+
+  @Override
+  public void finalizeAllocation(OrderInformation orderInformation, List<String> exclusiveVetos, List<String> sharedVetos) {
+    vmAlgorithm.finalizeAllocation(orderInformation, exclusiveVetos, sharedVetos);    
   }
   
   public boolean freeVetos(OrderInformation orderInformation) {
@@ -392,11 +407,16 @@ public class VetoManagement extends FunctionGroup implements VetoManagementInter
           try {
             if (veto.isAdministrative()) {
               vmAlgorithm.allocateAdministrativeVeto(new AdministrativeVeto(veto.getName(), veto.getDocumentation(), now));
+            } else if (veto.isShared()) {
+              for (Long sharedOrderId : veto.getSharedOrderIds()) {
+                OrderInformation orderInfo = new OrderInformation(sharedOrderId);
+                vmAlgorithm.allocateVetos(orderInfo, Collections.emptyList(), List.of(veto.getName()), now);
+                vmAlgorithm.finalizeAllocation(orderInfo, Collections.emptyList(), List.of(veto.getName()));
+              }
             } else {
-              OrderInformation orderInfo;
-              orderInfo = new OrderInformation(veto.getUsingOrderId(), veto.getUsingRootOrderId(), veto.getUsingOrderType());
-              vmAlgorithm.allocateVetos(orderInfo, List.of(veto.getName()), now);
-              vmAlgorithm.finalizeAllocation(orderInfo, List.of(veto.getName()));
+              OrderInformation orderInfo = new OrderInformation(veto.getUsingOrderId(), veto.getUsingRootOrderId(), veto.getUsingOrderType());
+              vmAlgorithm.allocateVetos(orderInfo, List.of(veto.getName()), Collections.emptyList(), now);
+              vmAlgorithm.finalizeAllocation(orderInfo, List.of(veto.getName()), Collections.emptyList());
             }
           } catch (Exception e) {
             throw new RuntimeException(e);
